# chrome-ext-api

./: .env.sample  .gitignore  README.md  fabfile.py  main.py  merger.py  pyproject.toml  requirements.txt  server.sh  transcribe.py
app/: db.py  helpers.py  queque.py  queue.py  router.py  services.py  settings.py
app/schemas/: responses.py  video.py
app/services/: backgroud_tasks.py  video.py
client/: .prettierrc  index.html  index.js  package-lock.json  package.json  svelte.config.js
client/src/: app.css  app.d.ts  app.html
client/src/routes/: +layout.svelte  +page.svelte
client/static/: background.js  browser-polyfill.js  content.js  manifest.json
server/: .dockerignore  .env.sample  Dockerfile.api  Dockerfile.merger  Dockerfile.transcriber  compose.yaml  fabfile.py  main.py  pyproject.toml  server.sh  setup.cfg
server/app/: __init__.py  db.py  queue.py  router.py  settings.py
server/app/middlewares/: video.py
server/app/schemas/: responses.py  video.py
server/consumers/: merger.py  transcribe.py
server/helpers/: __init__.py  helpers.py
server/tests/: test_helpers.py
