[metadata]
name = recorder-extension
version = 0.1.0
description = An api for storing and fetching video files recorded by a chrome extension
author = Nasir Abdulrasheed
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = 
    app
install_requires =
    fastapi
    python-decouple
    python-multipart
    uvicorn
    aio-pika
    motor
    hvac
    ffmpeg-python
    pydub
python_requires = >=3.10
package_dir =
    =src
zip_safe = no